# Howler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  mobile.yml  release.yml
docs/: api-guide.md  config-guide.md  user-guide.md
fixtures/: gbif_response.json  inaturalist_response.json  iucn_response.json  iucn_threats_response.json  movebank_response.json
howler-cli/: Cargo.toml
howler-cli/src/: main.rs  server.rs
howler-core/: Cargo.toml
howler-core/src/: annotations.rs  auth.rs  clustering.rs  config.rs  crypto.rs  db.rs  export.rs  filter.rs  gbif.rs  import.rs  inaturalist.rs  iucn.rs  lib.rs  migrations.rs  ml.rs  models.rs  movebank.rs  movement.rs  streaming.rs  temporal.rs  web_server.rs  websocket.rs
howler-core/src/tests/: auth_test.rs  config_test.rs  db_test.rs  gbif_test.rs  inaturalist_test.rs  iucn_test.rs  mod.rs  models_test.rs  movebank_test.rs  streaming_test.rs
howler-core/tests/: integration_test.rs
howler-gui/: Cargo.toml
howler-gui/src/: lib.rs  main.rs
howler-tui/: Cargo.toml
howler-tui/src/: lib.rs  main.rs
mobile-app/: package-lock.json  package.json  tsconfig.json
mobile-app/src/: App.tsx  api.ts  types.ts
mobile-app/src/components/: ConnectionBanner.tsx  EmptyState.tsx  FilterBar.tsx  LoadingSpinner.tsx  OfflineMapBanner.tsx  SightingCard.tsx  TileDownloader.tsx
mobile-app/src/hooks/: useApiKeys.ts  useAutoFetch.ts  useWebSocket.ts
mobile-app/src/screens/: AnalysisScreen.tsx  HomeScreen.tsx  MapScreen.tsx  SettingsScreen.tsx
mobile-app/src/services/: NetworkStatus.ts  TileCache.ts
mobile-app/src/services/__tests__/: TileCache.test.ts
packaging/: README.md
packaging/linux/: build.sh
packaging/macos/: build.sh
packaging/windows/: build.ps1
shared/: types.ts
shared/api/: index.ts
web-app/: index.html  package-lock.json  package.json
web-app/src/: App.tsx  api.ts  index.css  types.ts
web-app/src/components/: BarChart.tsx  ConnectionStatus.tsx  Layout.tsx  SightingModal.tsx  SightingTable.tsx  StatsCard.tsx
web-app/src/hooks/: useAutoFetch.ts  useWebSocket.ts
web-app/src/pages/: AnalysisPage.tsx  DashboardPage.tsx  MachineLearningPage.tsx  MapPage.tsx  SettingsPage.tsx
