[workspace]
members = [
    "howler-core",
    "howler-tui",
    "howler-gui",
    "howler-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Howler Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/realgoldfang/Howler"
readme = "README.md"
keywords = ["wolf", "tracking", "wildlife", "gis", "conservation"]
categories = ["science", "visualization"]

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22"
toml = "0.8"
