[package]
name = "howler-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
geo = "0.28"
geojson = "0.24"
rstar = "0.12"
csv = "1.3"
linfa = { version = "0.7", features = ["serde"] }
linfa-linear = "0.7"
linfa-trees = "0.7"
ndarray = { version = "0.15", features = ["serde"] }
rand = "0.8"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
argon2 = "0.5"
uuid = { version = "1.8", features = ["v4"] }
base64 = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
mockito = "1.4"
tempfile = "3.10"
