[package]
name = "howler-core"
description = "Core library for the Howler wolf-tracking platform: database, data ingestion, ML, web server, and real-time streaming"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "howler_core"

[features]
default = ["server", "ml", "api-fetch"]
mobile = []
server = ["dep:axum", "dep:tower-http", "dep:futures-util", "dep:tokio"]
ml = ["dep:linfa", "dep:linfa-linear", "dep:linfa-trees", "dep:ndarray"]
api-fetch = ["dep:reqwest", "dep:tokio"]

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
geo = "0.28"
geojson = "0.24"
rstar = "0.12"
csv = "1.3"
argon2 = "0.5"
uuid = { version = "1.8", features = ["v4"] }
base64 = { workspace = true }
toml = { workspace = true }
rand = "0.8"

# Optional heavy deps (gated behind features)
axum = { version = "0.7", features = ["ws"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
futures-util = { version = "0.3", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
linfa = { version = "0.7", features = ["serde"], optional = true }
linfa-linear = { version = "0.7", optional = true }
linfa-trees = { version = "0.7", optional = true }
ndarray = { version = "0.15", features = ["serde"], optional = true }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
mockito = "1.4"
tempfile = "3.10"
