[package]
name = "howler-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "howler_gui"
path = "src/lib.rs"

[[bin]]
name = "howler-gui"
path = "src/main.rs"

[dependencies]
howler-core = { path = "../howler-core" }
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
image = { version = "0.25", features = ["png", "jpeg"] }
lru = "0.12"
dirs = "6"
