[package]
name = "howler-gui"
description = "Native GUI for the Howler wolf-tracking platform with interactive map, sightings, and real-time data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "howler_gui"
path = "src/lib.rs"

[[bin]]
name = "howler-gui"
path = "src/main.rs"

[dependencies]
howler-core = { version = "0.1.0", path = "../howler-core" }
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
anyhow = { workspace = true }

[package.metadata.deb]
name = "howler-gui"
maintainer = "Howler Contributors"
copyright = "2024, Howler Contributors"
extended-description = "Native GUI for the Howler wolf-tracking platform with interactive map"
section = "science"
priority = "optional"
assets = [
    ["target/release/howler-gui", "usr/bin/howler-gui", "755"],
    ["../icons/icon-256x256.png", "usr/share/icons/hicolor/256x256/apps/howler-gui.png", "644"],
    ["../icons/icon-512x512.png", "usr/share/icons/hicolor/512x512/apps/howler-gui.png", "644"],
]
depends = "libgcc-s1, libgtk-3-0"

[package.metadata.macos-bundle]
name = "HowlerGui"
identifier = "com.howler.gui"
icon = "icons/icon.icns"
